# microc-compiler

./: .gitignore  Makefile  README.md  a.bc  a.out  dune-project  microc-compiler.opam  microcc  run_tests.sh
microc-codegen/: Makefile  microcc
microc-codegen/src/: codegen.ml  errors.messages  microcc.ml  parser.mly  parser_engine.ml  rt-support.c  scanner.mll  semant.ml  symbol_table.ml  symbol_table.mli  util.ml
microc-codegen/test/: test-add1.mc  test-array1.mc  test-ex4.mc  test-string1.mc  test-struct1.mc
microc-parsing/: Makefile  _tags  microcc  scan_test
microc-parsing/src/: microcc.ml  parser.mly  parser_engine.ml  scan_test.ml  scanner.ml  scanner.mll
microc-parsing/test/: test-array1.mc
microc-semantic-analysis/: microcc
microc-semantic-analysis/src/: ast.ml  microcc.ml  parser.mly  scanner.mll  semant.ml  symbol_table.ml  symbol_table.mli  util.ml
microc-semantic-analysis/test/: fail-assign1.mc  fail-for1.mc  test-add1.mc  test-ex4.mc  test-for1.mc
src/: ast.ml  codegen.ml  dune  errors.messages  microcc.ml  opt_pass.ml  parser.mly  parser_engine.ml  rt-support.c  scanner.mll  semant.ml  symbol_table.ml  symbol_table.mli  util.ml
test/: test-add1.mc  test-arith2.mc  test-array1.c  test-do-while1.mc  test-do-while2.mc  test-float1.mc  test-float1.out  test-float2.mc  test-for1.mc  test-incr.mc  test-multi-array1.mc  test-multi-array2.mc  test-shortop1.mc  test-shortop2.mc  test-shortop2.out  test-string1.mc  test-string2.mc  test-string3.mc  test-struct1.mc  test-struct2.mc  test-struct2.out
